# DroneDevKit

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
Core/Inc/: config.h  main.h  stm32f4xx_hal_conf.h
Core/Src/: main.c  syscalls.c
Drivers/STM32F4_HAL/STM32CubeF4/: Release_Notes.html  package.xml  sbom.cdx.json
Drivers/STM32F4_HAL/STM32CubeF4/Projects/: Release_Notes.html
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32446E_EVAL/Applications/FreeRTOS/FreeRTOS_Mutexes/Src/: main.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32446E_EVAL/Applications/USB_Host/HID_Standalone/Src/: usbh_conf.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32446E_EVAL/Applications/USB_Host/MSC_RTOS/Src/: usbh_conf.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32469I-Discovery/Examples/LCD_DSI/LCD_DSI_VideoMode_DoubleBuffering/: readme.txt
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32469I_EVAL/Applications/FreeRTOS/FreeRTOS_Mutexes/Src/: main.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32469I_EVAL/Applications/USB_Host/HID_Standalone/Src/: usbh_conf.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32469I_EVAL/Applications/USB_Host/MSC_Standalone/Src/: usbh_conf.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM324x9I_EVAL/Applications/FreeRTOS/FreeRTOS_Mutexes/Src/: main.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM324xG_EVAL/Applications/FreeRTOS/FreeRTOS_Mutexes/Src/: main.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32F412G-Discovery/Applications/FreeRTOS/FreeRTOS_Mutexes/Src/: main.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32F412G-Discovery/Examples/BSP/Src/: audio_rec_analog.c  main.c
Drivers/STM32F4_HAL/STM32CubeF4/Projects/STM32F413ZH-Nucleo/Applications/FreeRTOS/FreeRTOS_Mutexes/Src/: main.c
Drivers/STM32F4_HAL/STM32CubeF4/_htmresc/: ReleaseNotes_Patch.html
